# julee

./: .env.example  .gitignore  .gitmodules  .mcp.json  .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONVENTIONS.md  DEVELOPMENT.md  Dockerfile.api  Dockerfile.ui  Dockerfile.worker  MANIFEST.in  Makefile  README.md  REFACTOR_C4_DIAGRAMS.md  RESUME_PLAN.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  tmp_hcd_analysis.md  worker.py
.github/workflows/: ci.yaml  publish.yml  pull_request.yml  python.yml  spa.yml
ADRs/: 003-sphinx-hcd.rst
api/: __init__.py  app.py  dependencies.py  requests.py
api/routers/: __init__.py  assembly_specifications.py  documents.py  knowledge_service_configs.py  knowledge_service_queries.py  system.py  workflows.py
api/services/: __init__.py  system_initialization.py
api/tests/: __init__.py  test_app.py  test_dependencies.py  test_requests.py
api/tests/routers/: __init__.py  test_assembly_specifications.py  test_documents.py  test_knowledge_service_configs.py  test_knowledge_service_queries.py  test_system.py  test_workflows.py
apps/: __init__.py
apps/admin/: __init__.py  cli.py  dependencies.py
apps/admin/commands/: __init__.py  artifacts.py  contexts.py  doctrine.py  doctrine_plugin.py  hcd.py  policy.py  routes.py  solution.py
apps/admin/doctrine/: __init__.py  conftest.py  test_admin.py
apps/admin/templates/: __init__.py  accelerator_details.txt.j2  app_details.txt.j2  class_details.txt.j2  context_details.txt.j2  doctrine_verify_summary.txt.j2  doctrine_verify_table.txt.j2  epic_details.txt.j2  integration_details.txt.j2  journey_details.txt.j2  persona_details.txt.j2  story_details.txt.j2  use_case_details.txt.j2
apps/admin/tests/: __init__.py  test_cli.py
apps/api/: __init__.py  app.py
apps/api/c4/: __init__.py  dependencies.py  requests.py  responses.py
apps/api/ceap/: __init__.py  app.py  dependencies.py  requests.py  responses.py
apps/api/hcd/: app.py  dependencies.py  mcp_responses.py  requests.py  responses.py  suggestions.py
apps/api/shared/: __init__.py
apps/c4-api/: app.yaml
apps/c4-mcp/: __main__.py  app.yaml  context.py
apps/c4_mcp/: __init__.py
apps/core-mcp/: __init__.py  context.py
apps/core_mcp/: __init__.py  __main__.py  context.py
apps/hcd-api/: app.yaml
apps/hcd-mcp/: __init__.py  __main__.py  app.yaml
apps/hcd_mcp/: __init__.py  context.py
apps/mcp/: __init__.py  server.py
apps/mcp/c4/: __init__.py  context.py  server.py
apps/mcp/hcd/: __init__.py  context.py  server.py
apps/mcp/shared/: __init__.py  (+5 more)
apps/sphinx/: __init__.py  directive_factory.py
apps/sphinx-c4/: app.yaml
apps/sphinx-hcd/: app.yaml
apps/worker/: __init__.py  dependencies.py  main.py
demo-ui/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
demo-ui/src/: index.css
deployment/: full-soverign.org  lab-stack.org  non-starters.org  paas-stack.org  sme.org
docs/: BRANCHING.md  CI-CD.md  COMPATABLE_VERSIONS.md  README.md  RELEASE_PROCESS.md  architecture.rst  code.rst  conf.py  configuration.rst  contributing.rst  deployment.rst  framework.rst  index.rst  installation.rst  quickstart.rst  test_catalog.rst  test_core_concept.rst  workflows.rst
docs/ADRs/: 001-contrib-layout.md  002-doctrine-test-architecture.md  003-workflow-orchestration-handlers.md  004-execution-agnostic-use-cases.md  005-doctrine-and-policy.md  006-code-outward-documentation.md  007-semantic-relations.md  008-generic-crud-use-cases.md  009-repository-service-distinction.md  010-apps-layer-architecture.md  RECTIFICATION_PLAN.md  index.md
docs/api/: apps.rst  index.rst  julee.rst
docs/architecture/: clean_architecture.rst  deployment.rst  framework.rst  overview.md  protocols.rst  repositories.rst  services.rst  workflows.rst
docs/domain/: index.rst
docs/journeys/: build-production-solution.rst  define-business-workflow.rst  design-system-architecture.rst
docs/proposals/: c4-inference-from-clean-architecture.md
docs/users/: index.rst
domain/: __init__.py
domain/models/: __init__.py
domain/repositories/: __init__.py  assembly.py  assembly_specification.py  base.py  document.py  document_policy_validation.py  knowledge_service_config.py  knowledge_service_query.py  policy.py
domain/use_cases/: __init__.py  decorators.py  extract_assemble_data.py  initialize_system_data.py  validate_document.py
examples/: __init__.py  client_example.py  populate_example_data.py
examples/data/: extract-action-items-query.json  extract-agenda-items-query.json  extract-meeting-info-query.json  meeting_minutes_assembly_spec.json  meeting_transcript.txt  offensive_language_check.json  offensive_language_policy.json  professionalism_check.json
maintenance/: README.md  releasing.rst
mcp_research/: design_review.md  docstring_to_mcp.md  tool_descriptions.md  tool_response_design.md  usecase_dto_patterns.md
repositories/: __init__.py
repositories/memory/: __init__.py  assembly.py  assembly_specification.py  base.py  document.py  document_policy_validation.py  knowledge_service_config.py  knowledge_service_query.py  policy.py
repositories/minio/: __init__.py  assembly.py  assembly_specification.py  client.py  document.py  document_policy_validation.py  knowledge_service_config.py  knowledge_service_query.py  policy.py
repositories/temporal/: __init__.py  activities.py  activity_names.py  proxies.py
research/: c4_fundamentals.md  julee_c4_analysis.md  plantuml_c4_syntax.md
services/: __init__.py
services/knowledge_service/: __init__.py  factory.py  knowledge_service.py  test_factory.py
services/temporal/: __init__.py  activities.py  activity_names.py  proxies.py
src/julee/: __init__.py  worker.py
ui/: .env.example  .gitignore  eslint.config.js  package.json  tsconfig.node.json
ui/src/: App.tsx  main.tsx
util/: domain.py
util/temporal/: decorators.py
util/tests/: test_decorators.py
util/validation/: type_guards.py
workflows/: __init__.py  extract_assemble.py  validate_document.py
(+2226 files in other folders)
