[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "julee"
version = "0.1.0"
description = "Julee Example - Capture, Extract, Assemble, Publish (CEAP) workflow system"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["temporal", "workflow", "document-processing", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    # Core framework
    "pydantic>=2.0.0",

    # Web framework and API
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "fastapi-pagination>=0.12.0",

    # Temporal workflow engine
    "temporalio>=1.0.0",

    # Storage
    "minio>=7.0.0",

    # AI/ML services
    "anthropic>=0.18.0",

    # JSON utilities
    "jsonschema>=4.0.0",
    "jsonpointer>=2.0",

    # Hashing utilities
    "multihash>=0.1.1",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "factory-boy>=3.3.0",

    # Code quality
    "pre-commit>=3.5.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",

    # Type stubs
    "types-python-dateutil",
]

docs = [
    # Sphinx core
    "sphinx>=7.0.0",
    "sphinx-autobuild>=2021.3.14",

    # Themes
    "sphinx-rtd-theme>=2.0.0",      # Read the Docs theme (popular choice)
    "furo>=2023.9.10",              # Modern alternative theme

    # Extensions
    "sphinx-autodoc-typehints>=1.25.0",  # Better type hint support
    "sphinxcontrib-mermaid>=0.9.2",      # Mermaid diagram support
    "sphinxcontrib-plantuml>=0.25",      # PlantUML diagram support

    # API documentation
    "sphinx-autoapi>=3.0.0",        # Automatic API documentation generation
]

[project.urls]
Homepage = "https://github.com/yourusername/julee"
Repository = "https://github.com/yourusername/julee"
Documentation = "https://github.com/yourusername/julee/blob/main/README.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "domain*", "repositories*", "services*", "workflows*", "examples*"]

[tool.pytest.ini_options]
testpaths = ["api/tests", "domain", "repositories", "services"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--tb=short",
    "--cov=api",
    "--cov=domain",
    "--cov=repositories",
    "--cov=services",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["api", "domain", "repositories", "services", "workflows"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.pyc",
    ".pytest_cache",
    ".mypy_cache",
    ".coverage",
    "htmlcov",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise from
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py
"tests/**/*.py" = ["B"]    # allow assert statements in tests

[tool.ruff.lint.isort]
known-first-party = ["api", "domain", "repositories", "services", "workflows"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "minio.*",
    "temporalio.*",
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
