[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "julee"
version = "0.1.3"
description = "Julee - Clean architecture for accountable and transparent digital supply chains"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "GPL-3.0"}
authors = [
    {name = "Pyx Industries", email = "chris@pyx.io"}
]
keywords = ["temporal", "workflow", "document-processing", "ai", "supply-chain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # Core Web Framework
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "python-multipart",
    "fastapi-pagination>=0.12.0",
    # Data Validation and Serialization
    "pydantic>=2.0.0",
    # Temporal Workflow Engine
    "temporalio[pydantic]>=1.3.0",
    # Object Storage
    "minio>=7.0.0",
    # AI/ML Services
    "anthropic>=0.66.0",
    # Utilities
    "click>=0.8.0",
    "Jinja2>=3.0.0",
    "PyYAML>=6.0.0",
    "python-magic>=0.4.27",
    "multihash>=0.1.1",
    "six>=1.16.0",
    "jsonschema>=4.0.0",
    "jsonpointer>=3.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.0.0",
    "factory-boy>=3.2.0",
    # Type checking
    "mypy>=1.7.0",
    "types-PyYAML",
    "types-jsonschema",
    "types-python-dateutil",
    # Code quality
    "black>=24.0.0",
    "ruff>=0.5.0",
    "pre-commit>=3.0.0",
    # Security
    "bandit",
    # Dependency management
    "pip-tools>=7.0.0",
    # Database (for testing)
    "asyncpg",
]

docs = [
    "sphinx>=7.0.0",
    "sphinx-autobuild>=2021.3.14",
    "sphinx-rtd-theme>=2.0.0",
    "furo>=2023.9.10",
    "sphinx-autodoc-typehints>=1.25.0",
    "sphinxcontrib-mermaid>=0.9.2",
    "sphinxcontrib-plantuml>=0.25",
    "sphinx-autoapi>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/pyx-industries/julee"
Repository = "https://github.com/pyx-industries/julee"
Documentation = "https://github.com/pyx-industries/julee#readme"
Issues = "https://github.com/pyx-industries/julee/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["julee*"]

[tool.setuptools.package-data]
julee = ["fixtures/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["src/julee"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--tb=short",
    "--cov=src/julee",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["src/julee"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.pyc",
    ".pytest_cache",
    ".mypy_cache",
    ".coverage",
    "htmlcov",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise from
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["B"]

[tool.ruff.lint.isort]
known-first-party = ["julee"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "minio.*",
    "temporalio.*",
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
